Fix lists in "about me" breaking on small screens

--- a/_assets/stylesheets/pages/_about.scss
+++ b/_assets/stylesheets/pages/_about.scss
@@ -27,6 +27,10 @@
   }
 
   .list {
+    li {
+      display: flex;
+    }
+
     a {
       text-decoration: underline;
     }
